@@ -2,7 +2,9 @@ master
 - Zixaphir
   New Themes:
   -- Yotsuba
+  -- Yotsuba B
   -- Redid PaisleyChan
+  Quote Links and Back Links now have separate color variables.
 
 0.7.4beta
 - Zixaphir
